openmetadata-v2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: openmetadata-v2
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - openmetadata2.rozhkov.pro
      secretName: openmetadata-v2-local-tls
  rules:
  - host: openmetadata2.rozhkov.pro
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openmetadata
            port:
              number: 8585
